tdf#120449: Show keyboard shortcuts in native menus

Who would have thought that this information has to be stored in
SalFrame

Change-Id: I8fbdf1794184e8dfd0b0025d29a19938dbb2af03
Reviewed-on: https://gerrit.libreoffice.org/62236
Tested-by: Jenkins
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>